--- a/www/css/style.css
+++ b/www/css/style.css
@@ -41,17 +41,22 @@
     
     #btnA {
         font-size: 20px;
-        position:absolute; top:380px; left:2%; width:43%; height:60px; 
+        position:absolute; top:380px; left:2%; width:24%; height:60px; 
     }
     
     #btnB {
         font-size: 20px;
-        position:absolute; top:380px; left:45%; width:25%; height:60px; 
+        position:absolute; top:380px; left:26%; width:24%; height:60px; 
     }
 
     #btnC {
-        font-size: 10px;
-        position:absolute; top:380px; left:70%; width:28%; height:60px; 
+        font-size: 20px;
+        position:absolute; top:380px; left:50%; width:24%; height:60px; 
+    }
+
+    #btnD {
+        font-size: 20px;
+        position:absolute; top:380px; left:74%; width:24%; height:60px; 
     }
     
     #minute {
